--- a/src/ionic-datepicker.styles.css
+++ b/src/ionic-datepicker.styles.css
@@ -18,17 +18,17 @@
   height: 215px;
 }
 .ionic_datepicker_popup .today {
-  border: 1px solid #009688;
+  border: 1px solid #55BBDE;
   border-radius: 50%;
 }
 .ionic_datepicker_popup .selected_date {
-  background-color: #009688;
+  background-color: #55BBDE;
   border-radius: 50%;
   color: #fff;
   font-weight: bold;
 }
 .ionic_datepicker_popup .popup-head {
-  background-color: #009688;
+  background-color: #55BBDE;
   display: none;
 }
 .ionic_datepicker_popup .popup-head .popup-title {
@@ -59,7 +59,7 @@
 }
 .ionic_datepicker_popup .popup-body .month_select, .ionic_datepicker_popup .popup-body .year_select {
   border: none;
-  border-bottom: 1px solid #009688;
+  border-bottom: 1px solid #55BBDE;
   padding: 0;
 }
 .ionic_datepicker_popup .popup-body .month_select .input-label, .ionic_datepicker_popup .popup-body .year_select .input-label {
@@ -73,7 +73,7 @@
 }
 .ionic_datepicker_popup .popup-body .month_select:after, .ionic_datepicker_popup .popup-body .year_select:after {
   right: 5px;
-  color: #009688;
+  color: #55BBDE;
 }
 .ionic_datepicker_popup .popup-body .show_nav {
   padding: 10px 0 0 0;
@@ -93,21 +93,21 @@
   padding: 0;
 }
 .ionic_datepicker_popup .popup-body .button-clear {
-  color: #009688;
+  color: #55BBDE;
 }
 .ionic_datepicker_popup .popup-buttons {
   padding: 0;
   min-height: 45px;
 }
 .ionic_datepicker_popup .popup-buttons button {
-  background-color: #009688;
+  background-color: #55BBDE;
   border-radius: 0;
   margin-right: 1px;
   color: #ffffff;
 }
 
 .ionic_datepicker_modal .header, .ionic_datepicker_modal .footer {
-  background-color: #009688;
+  background-color: #55BBDE;
 }
 .ionic_datepicker_modal .header .title, .ionic_datepicker_modal .header .button, .ionic_datepicker_modal .footer .title, .ionic_datepicker_modal .footer .button {
   color: #ffffff;
@@ -116,10 +116,10 @@
   margin: 0;
 }
 .ionic_datepicker_modal .today {
-  border: 1px solid #009688;
+  border: 1px solid #55BBDE;
 }
 .ionic_datepicker_modal .selected_date {
-  background-color: #009688;
+  background-color: #55BBDE;
   color: #fff;
   font-weight: bold;
 }
@@ -131,11 +131,11 @@
   padding: 1px 5px;
 }
 .ionic_datepicker_modal .button-clear {
-  color: #009688;
+  color: #55BBDE;
 }
 .ionic_datepicker_modal .month_select, .ionic_datepicker_modal .year_select {
   border: none;
-  border-bottom: 1px solid #009688;
+  border-bottom: 1px solid #55BBDE;
   padding: 0;
 }
 .ionic_datepicker_modal .month_select .input-label, .ionic_datepicker_modal .year_select .input-label {
@@ -149,7 +149,7 @@
 }
 .ionic_datepicker_modal .month_select:after, .ionic_datepicker_modal .year_select:after {
   right: 5px;
-  color: #009688;
+  color: #55BBDE;
 }
 .ionic_datepicker_modal .padding_left_5px {
   padding-left: 5px;
