--- a/src/ionic-datepicker.styles.css
+++ b/src/ionic-datepicker.styles.css
@@ -41,7 +41,7 @@
   background-color: #ffffff;
 }
 .ionic_datepicker_popup .popup-body .selected_date_full {
-  background-color: #019688;
+  background-color: #55BBDE;
   margin: -10px -10px 0 -10px;
   height: 45px;
   text-align: center;
