--- a/src/ionic-datepicker.styles.css
+++ b/src/ionic-datepicker.styles.css
@@ -2,6 +2,10 @@
   padding: 0;
 }
 
+.platform-android .bar .title.title-left {
+  text-align: center;
+}
+
 .ionic_datepicker_popup .font_bold {
   font-weight: bold;
 }
@@ -171,13 +175,84 @@
   font-size: 22px;
 }
 
-.platform-android .bar .title.title-left {
-  text-align: center;
-}
+
 .platform-android .ionic_datepicker_modal select {
   left: 25%;
 }
 
 .platform-ios .ionic_datepicker_modal select {
+  left: 5%;
+}
+
+
+
+
+.ionic_datepicker_popover .header, .ionic_datepicker_popover .footer {
+  background-color: #55BBDE;
+}
+.ionic_datepicker_popover .header .title, .ionic_datepicker_popover .header .button, .ionic_datepicker_popover .footer .title, .ionic_datepicker_popover .footer .button {
+  color: #ffffff;
+}
+.ionic_datepicker_popover .footer .button-block {
+  margin: 0;
+}
+.ionic_datepicker_popover .today {
+  border: 1px solid #55BBDE;
+}
+.ionic_datepicker_popover .selected_date {
+  background-color: #55BBDE;
+  color: #fff;
+  font-weight: bold;
+}
+.ionic_datepicker_popover .pointer_events_none {
+  pointer-events: none;
+  color: #aaaaaa !important;
+}
+.ionic_datepicker_popover .select_section {
+  padding: 1px 5px;
+}
+.ionic_datepicker_popover .button-clear {
+  color: #55BBDE;
+}
+.ionic_datepicker_popover .month_select, .ionic_datepicker_popover .year_select {
+  border: none;
+  border-bottom: 1px solid #55BBDE;
+  padding: 0;
+}
+.ionic_datepicker_popover .month_select .input-label, .ionic_datepicker_popover .year_select .input-label {
+  padding: 2px 0;
+  width: 0;
+}
+.ionic_datepicker_popover .month_select select, .ionic_datepicker_popover .year_select select {
+  left: 10px;
+  border: none;
+  padding: 0 10px;
+}
+.ionic_datepicker_popover .month_select:after, .ionic_datepicker_popover .year_select:after {
+  right: 5px;
+  color: #55BBDE;
+}
+.ionic_datepicker_popover .padding_left_5px {
+  padding-left: 5px;
+}
+.ionic_datepicker_popover .padding_right_5px {
+  padding-right: 5px;
+}
+.ionic_datepicker_popover .date_col {
+  height: 50px;
+  line-height: 50px;
+}
+.ionic_datepicker_popover .font_bold {
+  font-weight: bold;
+}
+.ionic_datepicker_popover .font_22px {
+  font-size: 22px;
+}
+
+.platform-android .ionic_datepicker_popover select {
+  left: 25%;
+}
+
+.platform-ios .ionic_datepicker_popover select {
   left: 5%;
 }
